--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                <div class="mySlides fade">
                   <div class="numbertext">7 / 7</div>
                   <img src="./assets/img7.png" style="width:100%">
-                  <div class="text">Flame Wrapped</div>
+                  <div class="text"></div>
                 </div>
               
                 <!-- Next and previous buttons -->
