--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
               </div>
         </div>
     </div>
+    <script src="./js/confetti.js"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
